# example-nft-marketplace

./: README.md
frontend/: craco.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  index.js
frontend/src/common/navbar/: Navbar.js
frontend/src/common/toast/: Toast.js  ToastContainer.js  ToastContext.js
frontend/src/hooks/: useNami.js  useToast.js  useWasm.js  useYoroi.js
frontend/src/pages/home/: Home.js
frontend/src/pages/home/components/: BuyPublicOfferCard.js  HomeCarousel.js  Navbar.js  OfferList.js
frontend/src/pages/mint/: Mint.js
frontend/src/pages/mint/components/: MintFormCard.js
frontend/src/pages/sell/: Sell.js
frontend/src/pages/sell/components/: CancelUserOfferCard.js  NFTList.js  SellNFTCard.js  UserOffersList.js
frontend/src/utils/: utils.js
guide/: example-nft-marketplace-explanation.md
swap/: CHANGELOG.md  cabal.project  swap.cabal  swap.plutus
swap/src/: Swap.hs
