cabal-version:      2.4
Name:               swap
Version:            1.0.0.0
Author:              Tsz Wai Wu
Maintainer:          tszwai@emurgo.io
Build-Type:          Simple


library
  hs-source-dirs:      src
  exposed-modules:     Swap
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , containers
                     , data-default
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-script-utils
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise